--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,11 +9,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Square
-        id: square
-        uses: mathieu-bour/square@0.1.0
       - name: Build Docker Image
-        run: docker build -t ${{ steps.square.outputs.image-release }} .
+        run: docker build -t europe-west6-docker.pkg.dev/csquare/public-examples/mnist-horovod-example:latest .
       - name: Setup Google Cloud SDK
         uses: mathieu-bour/setup-gcloud@1.3.0
         with:
@@ -21,4 +18,4 @@ jobs:
           service-account-key: ${{ secrets.GCLOUD_AUTH }}
           configure-docker: europe-west6-docker.pkg.dev
       - name: Push Docker Image to Google Artifact Registry
-        run: docker push ${{ steps.square.outputs.image-release }}
+        run: docker push europe-west6-docker.pkg.dev/csquare/public-examples/mnist-horovod-example:latest
